# trapo-app

./: .gitignore  README.md  setup.cfg
.github/: FUNDING.yml
src/: test.py
src/trapo_app/: app.py  io_helpers.py  math_helpers.py  pdf_helpers.py  table_helpers.py
