[metadata]
name = trapo_app
version = attr: trapo_app.__version__
author = Sarah Böning
author_email = sarah.boening@web.de
description = Automatisierung der EHfS Trapos
url = https://github.com/Ein-Herz-fuer-Streuner/trapo-app
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
requires_python = >=3.9
package_dir=
    =src
packages=find:

install_requires =
    pandas
    python-docx
    openpyxl
    python-dateutil
    xlsxwriter

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    trapo-app = trapo_app.app:main
    trapo-vergleich = trapo_app.app:compare
    trapo-traces = trapo_app.app:rename
    trapo-traces-vergleich = trapo_app.app:compare_with_traces
    trapo-kennzeichen = trapo_app.app:distance
